kubernetes/manifests/argocd/templates/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: victoria-metrics
    - fromEndpoints:
        - {}
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: redis
      toPorts:
        - ports:
            - port: "6379"
    - toEndpoints:
        - {}
    - toEntities:
          - kube-apiserver
    # ArgoCD needs to pull helmcharts from the internet, I'm not allowing every single repo here. 
    - toEntities:
          - world
      toPorts:
        - ports:
            - port: "443"
            - port: "80"
